@@ -5,7 +5,7 @@
 ** md5 patch by Walter Campbell <wcampbel@botbay.net>
 ** Modernization, getopt, etc for the Hybrid IRCD team
 **
-** $Id: mkpasswd.c,v 1.10 2001/05/15 16:13:37 wcampbel Exp $
+** $Id: mkpasswd.c,v 1.11 2001/06/08 02:31:11 wcampbel Exp $
 */
 #include <stdio.h>
 #include <string.h>
@@ -17,13 +17,14 @@
 #define FLAG_DES     0x00000002
 #define FLAG_SALT    0x00000004
 #define FLAG_PASS    0x00000008
+#define FLAG_LENGTH  0x00000010
 
 extern char *getpass();
 extern char *crypt();
 
 
 char *make_des_salt();
-char *make_md5_salt();
+char *make_md5_salt(int);
 char *make_md5_salt_para(char *);
 void usage();
 static char saltChars[] = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789./";
@@ -39,10 +40,11 @@ char *argv[];
   char *saltpara = NULL;
   char *salt;
   int flag = 0;
+  int length = 8;
 
   srandom(time(NULL));
 
-  while( (c=getopt(argc, argv, "mdh?s:p:")) != -1)
+  while( (c=getopt(argc, argv, "mdh?l:s:p:")) != -1)
   {
     switch(c)
     {
@@ -51,6 +53,10 @@ char *argv[];
         break;
       case 'd':
         flag |= FLAG_DES;
+        break;
+      case 'l':
+        flag |= FLAG_LENGTH;
+        length = atoi(optarg);
         break;
       case 's':
         flag |= FLAG_SALT;
@@ -74,7 +80,7 @@ char *argv[];
     if (flag & FLAG_SALT)
       salt = make_md5_salt_para(saltpara);
     else
-      salt = make_md5_salt();
+      salt = make_md5_salt(length);
   } else {
     if (flag & FLAG_SALT) {
       if ((strlen(saltpara) == 2)) {
@@ -124,26 +130,31 @@ char *make_md5_salt_para(char *saltpara)
   return NULL;
 }
   
-char *make_md5_salt()
+char *make_md5_salt(int length)
 {
-  static char salt[13];
+  static char salt[21];
   int i;
   char* saltptr=salt;
+  if (length > 16) {
+    printf("MD5 salt length too long\n");
+    exit(0);
+  }
   salt[0] = '$';
   salt[1] = '1';
   salt[2] = '$';
-  for (i=3; i<=10; i++)
+  for (i=3; i<(length+3); i++)
     salt[i] = saltChars[random() % 64];
-  salt[11] = '$';
-  salt[12] = '\0';
+  salt[length+3] = '$';
+  salt[length+4] = '\0';
   return saltptr;
 }
 
 void usage()
 {
-  printf("mkpasswd [-m|-d] [-s salt] [-p plaintext]\n");
+  printf("mkpasswd [-m|-d] [-l saltlength] [-s salt] [-p plaintext]\n");
   printf("-m Generate an MD5 password\n");
   printf("-d Generate a DES password\n");
+  printf("-l Specify a length for a random MD5 salt\n");
   printf("-s Specify a salt, 2 alphanumeric characters for DES, up to 16 for MD5\n");
   printf("-p Specify a plaintext password to use\n");
   printf("Example: mkpasswd -m -s 3dr -p test\n");
